--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: sample_production
   username: sample
   password: <%= ENV['SAMPLE_DATABASE_PASSWORD'] %>
